--- a/style.css
+++ b/style.css
@@ -5,32 +5,140 @@
   padding: 0;
   max-width: 100%;
   overflow-x: hidden;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
-  max-width: 85%;
-  margin: 10px auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  padding: 1rem 7%;
+  background: rgb(212 208 208 / 36%);
+  backdrop-filter: blur(3px);
 }
 
 .bar1, .bar2, .bar3 {
   width: 30px;
   height: 5px;
-  background-color: #333;
+  background-color: #272a31;
   margin: 6px 0;
+  font-size: 3rem;
+  cursor: pointer;
 }
 
 #logo, nav {
   display: none;
 }
 
-.headline {
-  color: white;
-  background-image: url(./assets/earth.jpg);
-  background-size: cover;
-  background-position-x: 100%;
+section {
+  padding: 2rem 2%;
 }
 
-.grid-container img {
-  width: 15%;
-  height: 25%;
+.headline {
+  background-image: url(./assets/home.jpg);
+  background-size: cover;
+  background-position-x: 100%;
+  padding-top: 18%;
+  opacity: 0.8;
+}
+
+.homeText {
+  font-weight: 700;
+  font-size: 40px;
+  color: #ff0009;
+  letter-spacing: 0.3rem;
+  padding: 5px;
+}
+
+.home {
+  font-weight: 500;
+  font-size: 25px;
+  color: #ff0009;
+  letter-spacing: 0.3rem;
+  padding: 5px;
+}
+
+.someText {
+  color: #272a31;
+  font-size: 20px;
+  line-height: 25px;
+  padding: 28px;
+  border: 4px solid #f4f4f4;
+  margin-bottom: 25px;
+}
+
+.date {
+  color: #272a31;
+  font-size: 29px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.venue {
+  color: #272a31;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+.prog {
+  background-color: #272a31;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.prog h2 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 600;
+  margin: 30px 0 15px;
+}
+
+.prog .prog-line {
+  border: 1px solid #ec5242;
+  width: 50px;
+  margin-bottom: 40px;
+}
+
+.prog .row-container {
+  list-style: none;
+}
+
+.prog .row-container li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 20px 5px;
+  margin-bottom: 10px;
+}
+
+.row-container img {
+  width: 28%;
+  padding-right: 5px;
+}
+
+.row-container li h3 {
+  color: #ec5242;
+  font-size: 20px;
+  padding-right: 21px;
+}
+
+.row-container p {
+  width: 60%;
+  color: #fff;
+  font-size: 16px;
+  padding-left: 30px;
+}
+
+.prog .join-program {
+  background-color: #ec5242;
+  color: #fff;
+  padding: 35px 55px;
+  margin: 40px 0;
+  font-size: 20px;
 }
