--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,13 @@ header {
   right: 0;
   z-index: 1;
   padding: 1rem 7%;
-  background: rgb(212 208 208 / 36%);
+  background: rgb(212 208 208 / 5%);
   backdrop-filter: blur(3px);
 }
 
-.bar1, .bar2, .bar3 {
+.bar1,
+.bar2,
+.bar3 {
   width: 30px;
   height: 5px;
   background-color: #272a31;
@@ -38,5 +40,5 @@ nav {
 }
 
 section {
-  padding: 2rem 2%;
+  padding: 2rem 5%;
 }
