--- a/css/home.css
+++ b/css/home.css
@@ -148,12 +148,13 @@
   margin-right: 20px;
   height: 150px;
   position: relative;
+  overflow-y: hidden;
 }
 
 .pic-container .image-container {
   width: 90%;
   height: 90%;
-  position: absolute;
+  position: relative;
   top: 20px;
   left: 20px;
 }
@@ -163,6 +164,7 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
+  position: absolute;
 }
 
 .talks .square {
@@ -350,6 +352,38 @@ footer {
   }
 
   /* speaker section here */
+
+  .talks {
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+  
+  .subheading {
+    font-weight: 700;
+    font-size: 25px;
+    width: fit-content;
+    margin: 30px auto 15px auto;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 33.33% 33.33% 33.33%;
+    padding: 5px 10%;
+  }
+
+  .grid-container .speaker {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 50px;
+  }
+
+  .talks .more {
+    display: none;
+  }
 
   #partners {
     display: block;
