--- a/css/home.css
+++ b/css/home.css
@@ -113,6 +113,11 @@
   cursor: pointer;
 }
 
+.prog button:hover {
+  color: #ec5242;
+  background-color: #f4f4f4;
+}
+
 /* ======== Dynamic Section ======= */
 
 .talks {
@@ -310,6 +315,13 @@ footer {
     margin-bottom: 10px;
   }
 
+  .row-container li:hover {
+    border: 2px solid #f4f4f4;
+    width: 25%;
+    transition: ease-in-out;
+    cursor: pointer;
+  }
+
   .prog h2 {
     color: #fff;
     font-size: 30px;
@@ -348,6 +360,15 @@ footer {
     color: #d3d3d3;
     font-size: 16px;
     margin: 35px auto;
+  }
+
+  .see-more:hover {
+    color: #ec5242;
+    cursor: pointer;
+  }
+
+  .see-more:focus {
+    color: #ec5242;
   }
 
   /* speaker section here */
