--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,8 @@ header {
 }
 
 .change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
+  -webkit-transform: rotate(-45deg) translate(16px, 20px);
+  transform: rotate(-45deg) translate(16px, 20px);
 }
 
 .change .bar2 {
@@ -41,20 +41,49 @@ header {
 }
 
 .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
+  -webkit-transform: rotate(45deg) translate(5px, -32px);
+  transform: rotate(45deg) translate(5px, -32px);
 }
 
 .navbar-nav {
   display: none;
 }
 
-nav {
+.navbar {
   display: none;
+}
+
+.mobile-nav {
+  display: none;
+  background: grey;
+  width: 100%;
+  height: 100vh;
+}
+
+.mobile-nav ul li {
+  list-style: none;
+  padding: 2% 12%;
+  margin: 8% 0;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.mobile-nav ul li a {
+  text-decoration: none;
+  color: #272a31;
+}
+
+.mobile-nav ul li a:hover {
+  color: #ec5242;
 }
 
 .d-block {
   display: block;
+}
+
+.background {
+  background: #fff;
+  padding: 2rem 0;
 }
 
 .navbar ul li a:hover {
@@ -78,6 +107,10 @@ section {
   .bar1,
   .bar2,
   .bar3 {
+    display: none;
+  }
+
+  .mobile-nav {
     display: none;
   }
 
