--- a/css/home.css
+++ b/css/home.css
@@ -208,16 +208,34 @@
 }
 
 .talks .more {
-  width: 100%;
-  border: 1px solid #d3d3d3;
-  border-radius: 5px;
-  padding: 15px 10px;
-  color: #272a31;
-  font-size: 18px;
+  display: none;
 }
 
-#partners,
-footer {
+#partners {
+  display: none;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  padding: 1rem 5%;
+}
+
+.footer img {
+  width: 50%;
+  padding: 0 5%;
+}
+
+.footer-title,
+.copyright {
+  color: #272a31;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 5px 0;
+  text-align: center;
+}
+
+.footer #rights {
   display: none;
 }
 
