--- a/css/home.css
+++ b/css/home.css
@@ -219,6 +219,7 @@
   display: flex;
   align-items: center;
   padding: 1rem 5%;
+  background: #272a31da;
 }
 
 .footer img {
@@ -226,13 +227,12 @@
   padding: 0 5%;
 }
 
-.footer-title,
-.copyright {
-  color: #272a31;
-  font-size: 16px;
+.footer-title {
+  color: #f4f4f4;
+  font-size: 14px;
   font-weight: 700;
   padding: 5px 0;
-  text-align: center;
+  text-align: left;
 }
 
 .footer #rights {
