--- a/css/home.css
+++ b/css/home.css
@@ -224,7 +224,7 @@
   display: flex;
   align-items: center;
   padding: 1rem 5%;
-  background: #272a31da;
+  background: #fff;
 }
 
 .footer-title {
