--- a/css/home.css
+++ b/css/home.css
@@ -224,11 +224,11 @@
   display: flex;
   align-items: center;
   padding: 1rem 5%;
-  background: #272a31da;
+  background: #fff;
 }
 
 .footer-title {
-  color: #f4f4f4;
+  color: #272a31;
   font-size: 14px;
   font-weight: 700;
   padding: 5px 0;
